--- a/debian/video-dl-4.0.29/debian/changelog
+++ b/debian/video-dl-4.0.29/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.29) lenny; urgency=low
+
+  * API and web version sync
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Thu, 11 Feb 2016 04:04:53 +0000
+
 video-dl (4.0.25) lenny; urgency=low
 
   * API and web version sync
