--- a/debian/video-dl-4.0.34/debian/changelog
+++ b/debian/video-dl-4.0.34/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.34) lenny; urgency=low
+
+  * Update video.sh
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Wed, 17 Feb 2016 16:45:38 +0000
+
 video-dl (4.0.29) lenny; urgency=low
 
   * API and web version sync
