--- a/debian/video-dl-4.0.36/debian/changelog
+++ b/debian/video-dl-4.0.36/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.36) lenny; urgency=low
+
+  * trigger
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Wed, 17 Feb 2016 21:10:09 +0000
+
 video-dl (4.0.34) lenny; urgency=low
 
   * Update video.sh
