--- a/debian/video-dl-4.0.44/debian/changelog
+++ b/debian/video-dl-4.0.44/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.44) lenny; urgency=low
+
+  * Update video.sh
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Sat, 20 Feb 2016 15:38:30 +0000
+
 video-dl (4.0.42) lenny; urgency=low
 
   * API and web version sync
