--- a/debian/video-dl-4.0.48/debian/changelog
+++ b/debian/video-dl-4.0.48/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.48) lenny; urgency=low
+
+  * API and web version sync
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Mon, 29 Feb 2016 04:14:08 +0000
+
 video-dl (4.0.46) lenny; urgency=low
 
   * API and web version sync
