--- a/debian/video-dl-4.0.52/debian/changelog
+++ b/debian/video-dl-4.0.52/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.52) lenny; urgency=low
+
+  * API and web version sync
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Thu, 07 Apr 2016 03:05:46 +0000
+
 video-dl (4.0.50) lenny; urgency=low
 
   * API and web version sync
