--- a/debian/video-dl-4.0.57/debian/video-dl-it.1
+++ b/debian/video-dl-4.0.57/debian/video-dl-it.1
@@ -448,7 +448,7 @@ Installa Cygwin \fIhttps://www\.cygwin\.com\fR (Non dimenticare di installare wg
 .
 .nf
 
-wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh
+wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && chmod +x video\.sh
 .
 .fi
 .
@@ -467,7 +467,7 @@ Per usare lo script da qualsiasi directory usa questo comando\.
 .
 .nf
 
-cd /bin && wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && cd $OLDPWD
+cd /bin && wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && chmod +x video\.sh && cd $OLDPWD
 .
 .fi
 .
