--- a/debian/video-dl-4.0.57/debian/video-dl.1
+++ b/debian/video-dl-4.0.57/debian/video-dl.1
@@ -433,7 +433,7 @@ Install Cygwin \fIhttps://www\.cygwin\.com\fR (don\'t forget to install wget and
 .
 .nf
 
-wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh
+wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && chmod +x video\.sh
 .
 .fi
 .
@@ -449,7 +449,7 @@ To run the script from any directory run the following commands:
 .
 .nf
 
-cd /bin && wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && cd $OLDPWD
+cd /bin && wget http://daniilgentili\.magix\.net/win/video\.sh \-O video\.sh && chmod +x video\.sh && cd $OLDPWD
 .
 .fi
 .
