--- a/debian/video-dl-4.0.57/debian/changelog
+++ b/debian/video-dl-4.0.57/debian/changelog
@@ -1,3 +1,9 @@
+video-dl (4.0.57) lenny; urgency=low
+
+  * API and web version sync
+
+ -- Daniil Gentili <daniil.gentili.dg@gmail.com>  Mon, 18 Apr 2016 03:03:54 +0000
+
 video-dl (4.0.52) lenny; urgency=low
 
   * API and web version sync
